Correct alignment issue

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -43,7 +43,7 @@
   gap: 0.8rem;
   position: absolute;
   left: -6rem;
-  bottom: 10rem;
+  bottom: 6rem;
 }
 
 .header__socials::after {
